infra/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: "HTTP"
    appgw.ingress.kubernetes.io/enable-grpc: "false"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: argocd.dev.kubelancer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
